# hyakou

./: .gitignore  .gitmodules  Cargo-wasm.toml  Cargo.toml  README.md  WASM_SETUP.md  build-wasm.sh  index.html  mise.toml
.claude/commands/: linear.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  claude-code-review.yml  codex-review-comment.yml  tests.yml
.zed/: settings.json
assets/: light.wgsl  no_light_vertex.wgsl  vertex.wgsl  vertex_hc.wgsl
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/hyako/: Cargo.toml
crates/hyako/assets/: no_light_vertex.wgsl  no_light_vertex_uniform.wgsl  vertex.wgsl  vertex_uniform.wgsl
crates/hyako/assets/gltf/test_fixtures/: material_texture_data_uri.gltf  material_texture_external.gltf  material_texture_invalid_image.gltf  material_texture_unsupported_texcoord.gltf  missing_normal.gltf  missing_position.gltf  missing_sidecar.gltf  non_indexed_mesh.gltf  scene_hierarchy.gltf  unsupported_lines_mode.gltf  vertex_colors.gltf  vertex_colors_data_uri.gltf
crates/hyako/src/: lib.rs  main.rs  state.rs
crates/hyako/src/flow/: asset_upload_controller.rs  command_sender.rs  commands.rs  flow.rs  frame_composer.rs  input_controller.rs  mod.rs  render_controller.rs  renderer_lifecycle_controller.rs
crates/hyako/src/gpu/: glTF.rs  gltf_tests.rs  material.rs  mod.rs  render_mesh.rs  render_pipeline.rs  texture.rs
crates/hyako/src/gpu/buffers/: camera_buffer.rs  mod.rs  model_matrix.rs  uniform.rs
crates/hyako/src/gpu/glTF/: builder.rs  diagnostics.rs  materials.rs  mod.rs  resources.rs  types.rs
crates/hyako/src/gui/: mod.rs  render_pass.rs
crates/hyako/src/gui/panels/: camera_panel.rs  mod.rs  primitive_overlay.rs
crates/hyako/src/gui/primitives/: circle.rs  line.rs  mod.rs  rect.rs
crates/hyako/src/gui/widgets/: text_editor.rs  text_editor_tests.rs
crates/hyako/src/renderer/: frame.rs  mod.rs  renderer_context.rs  surface_frame_controller.rs
crates/hyako/src/renderer/actions/: camera_actions.rs  mod.rs
crates/hyako/src/renderer/animator/: mod.rs
crates/hyako/src/renderer/animator/trajectory/: circular.rs  linear.rs  stationary.rs
crates/hyako/src/renderer/components/: camera.rs  glTF.rs  light.rs  mesh_node.rs  mod.rs  model_matrix.rs  render_mesh.rs  render_pipeline.rs  texture.rs
crates/hyako/src/renderer/geometry/: mesh.rs  render_object.rs
crates/hyako/src/renderer/handlers/: asset_handler.rs  camera_controller.rs  mod.rs  mouse_bindings.rs  mouse_handler.rs  resource_handler.rs
crates/hyako/src/renderer/handlers/camera/: mod.rs  mode.rs  movement.rs  movement_tests.rs  state.rs
crates/hyako/src/renderer/types/: ids.rs  mod.rs  uniform.rs
crates/hyako/src/renderer/util/: mod.rs
crates/hyako/src/renderer/wrappers/: mod.rs
crates/types/: Cargo.toml
crates/types/src/: camera.rs  ids.rs  (+1 more)
crates/wasm_bindings/: Cargo.toml
crates/wasm_bindings/src/: bindings.rs  lib.rs  main.rs
crates/wasm_bindings/tests/: web.rs
frontend/: .cta.json  .gitignore  Cargo.toml  README.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: styles.css
src/: lib.rs  main.rs  state.rs
src/renderer/: mod.rs  renderer_context.rs
(+101 files in other folders)
