[package]
name = "hyako"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
env = "1.0.1"
env_logger = "0.11.8"
log = "0.4.28"
mockall = "0.13.1"
pollster = "0.4.0"
wgpu = "27.0.1"
winit = "0.30.12"
bytemuck = "1.24.0"
image = { version =  "0.25.8", features = ["jpeg", "png"] }
gltf = "1.4.1"
uuid = { version = "1.18.1", features = ["v4"] }
glam = { version = "0.30.9", features = ["bytemuck"] }
parking_lot = "0.12.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
] }
console_error_panic_hook = "0.1"
console_log = "1.0"

[profile.release]
opt-level = 3
lto = true
