[package]
name = "hyako"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
env = "1.0.1"
env_logger = "0.11.8"
log = "0.4.28"
mockall = "0.13.1"
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.13"
bytemuck = "1.24.0"
image = { version =  "0.25.8", features = ["jpeg", "png"] }
gltf = "1.4.1"
uuid = { version = "1.18.1", features = ["v4", "js"] }
glam = { version = "0.30.9", features = ["bytemuck"] }
parking_lot = "0.12.5"
strum = "0.27.2"
strum_macros = "0.27.2"
smallvec = "1.15.1"
